--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
+    "redux-localstorage-simple": "^2.1.6",
     "redux-logger": "^3.0.6"
   },
   "scripts": {
